OP-544 remove JRadioButton shortcut keys (#559)
* OP-544 remove JRadioButton shortcut keys

* OP-544 review comments

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -23,6 +23,7 @@ angal.common.note.title                                                         
 ########################################
 # Common button text and short cut keys
 ########################################
+angal.common.all.btn                                                             = All
 angal.common.cancel.btn                                                          = Cancel
 angal.common.cancel.btn.key                                                      = C
 angal.common.close.btn                                                           = Close
@@ -33,10 +34,12 @@ angal.common.edit.btn                                                           
 angal.common.edit.btn.key                                                        = E
 angal.common.excel.btn                                                           = Excel
 angal.common.excel.btn.key                                                       = E
+angal.common.female.btn                                                          = Female
 angal.common.filter.btn                                                          = Filter
 angal.common.filter.btn.key                                                      = F
 angal.common.launchreport.btn                                                    = Launch Report 
 angal.common.launchreport.btn.key                                                = R
+angal.common.male.btn                                                            = Male
 angal.common.new.btn                                                             = New
 angal.common.new.btn.key                                                         = N
 angal.common.newpatient.btn                                                      = New Patient
@@ -108,7 +111,6 @@ angal.common.laboratory.txt                                                     
 angal.common.male.txt                                                            = Male
 angal.common.months.txt                                                          = Months
 angal.common.name.txt                                                            = Name
-angal.common.new.txt                                                             = New
 angal.common.notapplicable.txt                                                   = N/A
 angal.common.notdefined.txt                                                      = N/D
 angal.common.note.txt                                                            = Note
@@ -321,6 +323,10 @@ angal.billbrowser.today.btn                                                     
 angal.billbrowser.today.btn.key                                                  = T
 angal.groupsbrowser.groupmenu.btn                                                = GroupMenu
 angal.groupsbrowser.groupmenu.btn.key                                            = M
+angal.lab.negativeabbr.btn                                                       = N
+angal.lab.positiveabbr.btn                                                       = P
+angal.labnew.ip.btn                                                              = IP
+angal.labnew.opd.btn                                                             = OPD
 angal.newbill.findpatient.btn                                                    = Find Patient
 angal.newbill.findpatient.btn.key                                                = P
 angal.newbill.changepatient.btn                                                  = Change Patient
@@ -399,8 +405,20 @@ angal.medicalstockward.chooselot.btn                                            
 angal.medicalstockward.chooselot.btn.key                                         = C
 angal.opd.examination.btn                                                        = Examination
 angal.opd.examination.btn.key                                                    = E
+angal.opd.new.btn                                                                = New
+angal.opd.reattendance.btn                                                       = Re-Attendance
 angal.operationrowlist.add.btn                                                   = Add
 angal.operationrowlist.add.btn.key                                               = A
+angal.patient.alive.btn                                                          = Alive
+angal.patient.dead.btn                                                           = Dead
+angal.patient.hasinsuranceno.btn                                                 = No
+angal.patient.hasinsuranceyes.btn                                                = Yes
+angal.patient.modeage.btn                                                        = Age
+angal.patient.modebdate.btn                                                      = BirthDate
+angal.patient.modedescription.btn                                                = Description
+angal.patient.no.btn                                                             = No
+angal.patient.unknown.btn                                                        = Unknown
+angal.patient.yes.btn                                                            = Yes
 angal.priceslist.copy.btn                                                        = Copy
 angal.priceslist.copy.btn.key                                                    = P
 angal.priceslist.managelists.btn                                                 = Manage Lists
@@ -451,6 +469,7 @@ angal.visit.arrowprevious.btn                                                   
 angal.visit.arrowprevious.btn.key                                                = P
 angal.visit.today.btn                                                            = Today
 angal.visit.today.btn.key                                                        = T
+angal.wardpharmacynew.ward.btn                                                   = Another Ward
 
 #########################################################
 # Column headers for browser modules (keys end in '.col')
@@ -1179,10 +1198,8 @@ angal.lab.in                                                                    
 angal.lab.insertvalidage.msg                                                     = Insert a valid age.
 angal.lab.material                                                               = Material
 angal.lab.multipleresults.txt                                                    = Multiple results
-angal.lab.n                                                                      = N
 angal.lab.nopatientselectedprintempylabel.msg                                    = No patient selected, print generic labels?
 angal.lab.note                                                                   = Note
-angal.lab.p                                                                      = P
 angal.lab.patient                                                                = Patient
 angal.lab.patientcode                                                            = P. Code
 angal.lab.pleaseinsertavalidexamdate.msg                                         = Please insert a valid exam date.
@@ -1372,18 +1389,14 @@ angal.operationrowlist.errosdel                                                 
 angal.operationrowlist.natureop                                                  = Operation designation 
 angal.operationrowlist.successdel                                                = Operation deleted
 angal.patient.agestar                                                            = Age *
-angal.patient.alive                                                              = Alive
 angal.patient.birthdate                                                          = Birth Date
 angal.patient.bloodtype                                                          = Blood Type
 angal.patient.bloodtype.unknown                                                  = Unknown
 angal.patient.confirmage.msg                                                     = Confirm age?
-angal.patient.dead                                                               = Dead
 angal.patient.doyouwanttodeletethepatientsphoto.msg                              = Do you want to delete the patient's photo?
 angal.patient.fathername                                                         = Father's Name
 angal.patient.firstname                                                          = First Name *
 angal.patient.hasinsurance                                                       = Has Insurance
-angal.patient.hasinsuranceno                                                     = No
-angal.patient.hasinsuranceyes                                                    = Yes
 angal.patient.indicatesrequiredfields                                            = * Indicates required fields
 angal.patient.insertage                                                          = Insert age or birth date
 angal.patient.insertdataofnewpatient                                             = Insert data for a new patient
@@ -1392,12 +1405,8 @@ angal.patient.insertsecondname.msg                                              
 angal.patient.insertvalidage.msg                                                 = Insert a valid age.
 angal.patient.loadfile                                                           = Load File
 angal.patient.maritalstatus                                                      = Marital Status
-angal.patient.modeage                                                            = Age
-angal.patient.modebdate                                                          = BirthDate
-angal.patient.modedescription                                                    = Description
 angal.patient.mothername                                                         = Mother's Name
 angal.patient.nextkin                                                            = Next of Kin
-angal.patient.no                                                                 = No
 angal.patient.note                                                               = Note
 angal.patient.parenttogether                                                     = Parents Together
 angal.patient.patientphoto                                                       = Patient Photo
@@ -1410,9 +1419,7 @@ angal.patient.sexstar                                                           
 angal.patient.taxcode                                                            = Tax Number ID
 angal.patient.thepatientisalreadypresent.msg                                     = The patient is already present; continue?
 angal.patient.tobm                                                               = TOB
-angal.patient.unknown                                                            = Unknown
 angal.patient.pleaseselectasex.msg                                               = Please select a sex.
-angal.patient.yes                                                                = Yes
 angal.patient.ymd.fmt.msg                                                        = {0}y {1}m {2}d
 angal.patientphoto.imagefiles.txt                                                = Image files
 angal.photoboothcomponent.webcam.txt                                             = Webcam
@@ -1612,7 +1619,6 @@ angal.ward.requiredfields                                                       
 angal.ward.select                                                                = Select
 angal.ward.wardwithpharmacy                                                      = Ward with pharmacy
 angal.wardpharmacynew.selectward                                                 = Select a ward
-angal.wardpharmacynew.ward                                                       = Another ward
 angal.wardpharmacy.stockwardledger.txt                                           = StockWard Ledger
 angal.xmpp.contacts.border                                                              = Contacts
 angal.xmpp.getinfo.txt                                                           = Get Info
