Chore: border labels start with all capital letters; missed one here

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -724,7 +724,7 @@ angal.admission.patientfolder.opd.txt                                           
 angal.admission.patientfolder.admission.txt                                      = Admission
 
 angal.admission.weight.border                                                    = Weight
-angal.admission.visitdate.border                                                 = Visit date
+angal.admission.visitdate.border                                                 = Visit Date
 angal.admission.deliveryresultype.border                                         = Delivery Result Type
 angal.admission.deliverytype.border                                              = Delivery Type
 angal.admission.deliverydate.border                                              = Delivery Date
