Chore: fix minor typo

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1131,7 +1131,7 @@ angal.common.uom.mmHg                                                           
 angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
-angal.dicom.delete.title                                                         = Confirm delete
+angal.dicom.delete.title                                                         = Confirm Delete
 angal.dicom.delete.yes                                                           = Yes
 angal.dicom.err                                                                  = Error
 angal.dicom.image.frames                                                         = Frames
@@ -1620,7 +1620,7 @@ angal.ward.select                                                               
 angal.ward.wardwithpharmacy                                                      = Ward with pharmacy
 angal.wardpharmacynew.selectward                                                 = Select a ward
 angal.wardpharmacy.stockwardledger.txt                                           = StockWard Ledger
-angal.xmpp.contacts.border                                                              = Contacts
+angal.xmpp.contacts.border                                                       = Contacts
 angal.xmpp.getinfo.txt                                                           = Get Info
 angal.xmpp.isnowoffline.txt                                                      = is now offline
 angal.xmpp.isnowonline.txt                                                       = is now online
