--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1324,10 +1324,10 @@ angal.medicalstockward.lotnumberabb                                             
 angal.medicalstockward.medical                                                   = Medical
 angal.medicalstockward.outcomes                                                  = Outcomes
 angal.medicalstockward.packets                                                   = packets
-angal.medicalstockward.patient.date                                              = Date
-angal.medicalstockward.patient.decription                                        = Drug
-angal.medicalstockward.patient.quantity                                          = Quantity
-angal.medicalstockward.patient.units                                             = Units
+angal.medicalstockward.patient.date.col                                          = Date
+angal.medicalstockward.patient.drug.col                                          = Drug
+angal.medicalstockward.patient.quantity.col                                      = Quantity
+angal.medicalstockward.patient.units.col                                         = Units
 angal.medicalstockward.pieces                                                    = \ pieces
 angal.medicalstockward.pleaseselectanoutcomesmovementfirst                       = Please select an Outcomes movement first
 angal.medicalstockward.rectify.actualquantity                                    = Actual Quantity
