Chore: uppercase column headers in Drug Table Model (#570)
* Chore: fix minor typo

* Chore: consistency; column headers not uppercased

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1131,7 +1131,7 @@ angal.common.uom.mmHg                                                           
 angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
-angal.dicom.delete.title                                                         = Confirm delete
+angal.dicom.delete.title                                                         = Confirm Delete
 angal.dicom.delete.yes                                                           = Yes
 angal.dicom.err                                                                  = Error
 angal.dicom.image.frames                                                         = Frames
@@ -1324,10 +1324,10 @@ angal.medicalstockward.lotnumberabb                                             
 angal.medicalstockward.medical                                                   = Medical
 angal.medicalstockward.outcomes                                                  = Outcomes
 angal.medicalstockward.packets                                                   = packets
-angal.medicalstockward.patient.date                                              = Date
-angal.medicalstockward.patient.decription                                        = Drug
-angal.medicalstockward.patient.quantity                                          = Quantity
-angal.medicalstockward.patient.units                                             = Units
+angal.medicalstockward.patient.date.col                                          = Date
+angal.medicalstockward.patient.drug.col                                          = Drug
+angal.medicalstockward.patient.quantity.col                                      = Quantity
+angal.medicalstockward.patient.units.col                                         = Units
 angal.medicalstockward.pieces                                                    = \ pieces
 angal.medicalstockward.pleaseselectanoutcomesmovementfirst                       = Please select an Outcomes movement first
 angal.medicalstockward.rectify.actualquantity                                    = Actual Quantity
@@ -1620,7 +1620,7 @@ angal.ward.select                                                               
 angal.ward.wardwithpharmacy                                                      = Ward with pharmacy
 angal.wardpharmacynew.selectward                                                 = Select a ward
 angal.wardpharmacy.stockwardledger.txt                                           = StockWard Ledger
-angal.xmpp.contacts.border                                                              = Contacts
+angal.xmpp.contacts.border                                                       = Contacts
 angal.xmpp.getinfo.txt                                                           = Get Info
 angal.xmpp.isnowoffline.txt                                                      = is now offline
 angal.xmpp.isnowonline.txt                                                       = is now online
