Chore: fix spelling

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -893,7 +893,7 @@ angal.admission.pleaseinsertavalidabortdate.msg                                 
 angal.agetype.overlappedrangespleasecheckthevalues.msg                           = Overlapped ranges, please check the values.
 angal.agetype.somerangesarenotdefinedpleasecheckthevalues.msg                    = Some ranges are not defined, please check the values.
 # DicomManagerFactory and FileSystemDicomManager
-angal.dicommanager.errorwiththedicomimplmentationclass.fmt.msg                   = Error with the DICOM implmentation class: {0}.
+angal.dicommanager.errorwiththedicomimplmentationclass.fmt.msg                   = Error with the DICOM implementation class: {0}.
 angal.dicommanager.genericerror.fmt.msg                                          = Generic error: {0}
 # SourceFiles
 angal.dicom.afileinthefolderistoobigpleasesetdicommaxsizeindicomproperties.fmt.msg = A file in the folder is too big. Please set 'dicom.max.size' in dicom.properties ({0}).
