Chore: fix spelling

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1003,7 +1003,7 @@ angal.groupsbrowser.thegroupalreadyexists.fmt.msg                               
 # OpdBrowserManager
 angal.opd.pleaseinsertthepatientsage.msg                                         = Please insert the patient's age.
 angal.opd.pleaseselectpatientssex.msg                                            = Please select the patient's sex.
-angal.opd.pleaseselectadisease.msg                                               = Please select a disesase.
+angal.opd.pleaseselectadisease.msg                                               = Please select a disease.
 angal.opd.specifyingduplicatediseasesisnotallowed.msg                            = Specifying duplicate diseases is not allowed.
 # OpdIoOperationRepositoryImpl
 # OpdIoOperations
