Chore: fix spelling

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1090,7 +1090,7 @@ angal.ward.cannotdeletematernityward.msg                                        
 angal.xmpp.wantstosharewithyouthisreport.fmt.msg                                 = \n*** {0} wants to share with you this report: {1}\n
 # CommunicationFrame
 angal.xmpp.me.txt                                                                = me
-angal.xmpp.wouldliketosend.fmt.msg                                               = {0} would like to send: \n"{1}
+angal.xmpp.wouldliketosend.fmt.msg                                               = {0} would like to send: \n{1}
 angal.xmpp.thefiletransferofbetweenyouandendedsuccesfully.fmt.msg                = the file transfer of {0} between you and {1} ended successfully
 angal.xmpp.filetransferofhasbeenaccepted.fmt.msg                                 = 0101010001000001 $File transfer of: {0} has been accepted
 angal.xmpp.filetransferofhasbeenrejected.fmt.msg                                 = 0101010001010010 $File transfer of: {0} has been rejected
