OP-542 remove stray character

--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1090,7 +1090,7 @@ angal.ward.cannotdeletematernityward.msg                                        
 angal.xmpp.wantstosharewithyouthisreport.fmt.msg                                 = \n*** {0} vuole condividere con voi questo report: {1}\n
 # CommunicationFrame
 angal.xmpp.me.txt                                                                = me
-angal.xmpp.wouldliketosend.fmt.msg                                               = {0} vorrei inviare: \n"{1}
+angal.xmpp.wouldliketosend.fmt.msg                                               = {0} vorrei inviare: \n{1}
 angal.xmpp.thefiletransferofbetweenyouandendedsuccesfully.fmt.msg                = il trasferimento di file di {0} tra te e {1} è terminato con successo
 angal.xmpp.filetransferofhasbeenaccepted.fmt.msg                                 = 0101010001000001 $Il trasferimento del file di: {0} è stato accettato
 angal.xmpp.filetransferofhasbeenrejected.fmt.msg                                 = 0101010001010010 $Il trasferimento del file di: {0} è stato rifiutato
