OP-542 Add more machine translations

--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -576,37 +576,37 @@ angal.ward.nurses.col                                                           
 angal.ward.doctors.col                                                           = DAKTARI
 angal.ward.haspharmacy.col                                                       = INA DUKA LA MADAWA
 
-angal.billbrowser.deletetheselectedbill.msg                                      = Ungependa kufuta bili iliyochaguliwa?
-angal.admtype.delete.fmt.msg                                                     = Delete admission type: "{0}"?
-angal.dicomtype.delete.fmt.msg                                                   = Delete DICOM type: "{0}"?
-angal.disctype.deleterow.fmt.msg                                                 = Delete discharge type: "{0}"?
-angal.disease.deletedisease.fmt.msg                                              = Delete disease: "{0}"?
-angal.distype.deletediseasetype.fmt.msg                                          = Delete disease type: "{0}"?
-angal.dlvrrestype.deletedeliveryresulttype.fmt.msg                               = Delete delivery result type: "{0}"?
-angal.dlvrtype.deletedeliverytype.fmt.msg                                        = Delete delivery type: "{0}"?
-angal.exa.deleteexam.fmt.msg                                                     = Delete exam:\nCode= {0}\nDescription= {1}?
-angal.exa.deleteexamresult.fmt.msg                                               = Delete exam result: {0}?
-angal.exatype.deleteexamtype.fmt.msg                                             = Delete exam type: {0}?
-angal.lab.deletelabexam.fmt.msg                                                  = Delete lab exam:\nRegistation date = {0}\nExam date = {1}\nExam = {2}\nPatient = {3}\nResult = {4}?
-angal.malnutrition.delete.msg                                                    = Delete the malnutrition?
-angal.medicals.deletemedical.fmt.msg                                             = Delete medical: {0}?
-angal.medstockmovtype.deletemovementtype.fmt.msg                                 = Delete movement type: {0}?
-angal.medtype.deletemedicaltype.fmt.msg                                          = Delete medical type: {0}?
-angal.operation.deleteoperation.fmt.msg                                          = Delete operation: {0}?
-angal.opetype.deleteoperationtype.fmt.msg                                        = Delete operation type: {0}?
+angal.admtype.delete.fmt.msg                                                     = Futa aina ya uandikishaji: "{0}"?
+angal.dicomtype.delete.fmt.msg                                                   = Futa aina ya DICOM: "{0}"?
+angal.disctype.deleterow.fmt.msg                                                 = Futa aina ya kutokwa: "{0}"?
+angal.disease.deletedisease.fmt.msg                                              = Futa ugonjwa: "{0}"?
+angal.distype.deletediseasetype.fmt.msg                                          = Futa aina ya ugonjwa: "{0}"?
+angal.dlvrrestype.deletedeliveryresulttype.fmt.msg                               = Futa aina ya matokeo ya utoaji: "{0}"?
+angal.dlvrtype.deletedeliverytype.fmt.msg                                        = Futa aina ya uwasilishaji: "{0}"?
+angal.exa.deleteexam.fmt.msg                                                     = Futa mtihani:\nNambari = {0}\nUfafanuzi = {1}?
+angal.exa.deleteexamresult.fmt.msg                                               = Futa matokeo ya mtihani: {0}?
+angal.exatype.deleteexamtype.fmt.msg                                             = Futa aina ya mtihani: {0}?
+angal.lab.deletelabexam.fmt.msg                                                  = Futa mtihani wa maabara:\nTarehe ya usajili = {0}\nTarehe ya mtihani = {1}\nMtihani = {2}\nMgonjwa = {3}\nMatokeo = {4}?
+angal.malnutrition.delete.msg                                                    = Futa utapiamlo?
+angal.medicals.deletemedical.fmt.msg                                             = Futa matibabu: {0}?
+angal.medstockmovtype.deletemovementtype.fmt.msg                                 = Futa aina ya harakati: {0}?
+angal.medtype.deletemedicaltype.fmt.msg                                          = Futa aina ya matibabu: {0}?
+angal.operation.deleteoperation.fmt.msg                                          = Futa operesheni: {0}?
+angal.opetype.deleteoperationtype.fmt.msg                                        = Futa aina ya operesheni: {0}?
 angal.patient.deletepatient.fmt.msg                                              = Futa mgonjwa: {0}?
-angal.patvac.deletepatientvaccine.fmt.msg                                        = Delete patient vaccine:\nVaccine date = {0}\nVaccine = {1}\nPatient = {2}?
-angal.preagtreattype.deletetreatmenttype.fmt.msg                                 = Delete treatment type: {0}?  
-angal.sms.deletetheselectedsms.msg                                               = Delete the selected SMS?
-angal.supplier.deletesupplier.fmt.msg                                            = Delete supplier: {0}?
+angal.patvac.deletepatientvaccine.fmt.msg                                        = Futa chanjo ya mgonjwa:\nTarehe ya chanjo = {0}\nChanjo = {1}\nMgonjwa = {2}?
+angal.preagtreattype.deletetreatmenttype.fmt.msg                                 = Futa aina ya matibabu: {0}?
+angal.sms.deletetheselectedsms.msg                                               = Futa SMS iliyochaguliwa?
+angal.supplier.deletesupplier.fmt.msg                                            = Futa muuzaji: {0}?
 angal.vaccine.deletevaccine.fmt.msg                                              = Futa chanjo: {0}?
-angal.vactype.deletevaccinetype.fmt.msg                                          = Delete vaccine type: {0}?
-angal.ward.deleteward.fmt.msg                                                    = Delete ward: {0}?
+angal.vactype.deletevaccinetype.fmt.msg                                          = Futa aina ya chanjo: {0}?
+angal.ward.deleteward.fmt.msg                                                    = Futa wodi: {0}?
 angal.userbrowser.deleteuser.fmt.msg                                             = Futa mtumiaji: {0}?
 angal.groupsbrowser.deletegroup.fmt.msg                                          = Futa kikundi: {0}?
-angal.operationrowlist.delete.operation.msg                                      = Delete the operation?
-angal.priceslist.deletethislistandallitsprices.fmt.msg                           = Delete this list and all its prices: {0}?
-angal.pricesothers.deletethisitem.fmt.msg                                        = Delete this item: {0}?
+angal.operationrowlist.delete.operation.msg                                      = Futa operesheni?
+angal.priceslist.deletethislistandallitsprices.fmt.msg                           = Futa orodha hii na bei zake zote: {0}?
+angal.pricesothers.deletethisitem.fmt.msg                                        = Futa kipengee hiki: {0}?
+
 
 
 # BillBrowser
