Chore: more spelling

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -587,7 +587,7 @@ angal.dlvrtype.deletedeliverytype.fmt.msg                                       
 angal.exa.deleteexam.fmt.msg                                                     = Delete exam:\nCode= {0}\nDescription= {1}?
 angal.exa.deleteexamresult.fmt.msg                                               = Delete exam result: {0}?
 angal.exatype.deleteexamtype.fmt.msg                                             = Delete exam type: {0}?
-angal.lab.deletelabexam.fmt.msg                                                  = Delete lab exam:\nRegistation date = {0}\nExam date = {1}\nExam = {2}\nPatient = {3}\nResult = {4}?
+angal.lab.deletelabexam.fmt.msg                                                  = Delete lab exam:\nRegistration date = {0}\nExam date = {1}\nExam = {2}\nPatient = {3}\nResult = {4}?
 angal.malnutrition.delete.msg                                                    = Delete the malnutrition?
 angal.medicals.deletemedical.fmt.msg                                             = Delete medical: {0}?
 angal.medstockmovtype.deletemovementtype.fmt.msg                                 = Delete movement type: {0}?
@@ -1187,7 +1187,7 @@ angal.genericreportbill.doyouwanttoprintreceipt.msg                             
 angal.help.pdfviewernotfound                                                     = PDF Viewer not found.\nThe User's Guide is located in the Documents folder.
 angal.help.pdfviewernotfoundoruserguidenotfound                                  = PDF Viewer not found or User Guide not found in the Documents folder
 angal.help.userguidenotfound                                                     = User Guide not found in the Documents folder
-angal.hospital                                                                   = Open Hospital                                                                                                                                                      
+angal.hospital                                                                   = Open Hospital
 angal.hospital.currencycod                                                       = Currency Code
 angal.hospital.emailaddress                                                      = Email address
 angal.hospital.faxnumber                                                         = Fax number
