--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -1331,24 +1331,24 @@ angal.medicalstockward.patient.units.col                                        
 angal.medicalstockward.pieces                                                    = pieces
 angal.medicalstockward.pleaseselectanoutcomesmovementfirst                       = Tafadhali chagua muendelezo wa Zinazotoka kwanza
 angal.medicalstockward.rectify.actualquantity                                    = Actual Quantity
-angal.medicalstockward.rectify.expiringdate                                      = Rectify
-angal.medicalstockward.rectify.expirydatebeforepreparationdate                   = Rectify
-angal.medicalstockward.rectify.inlot                                             = Rectify
+angal.medicalstockward.rectify.expiringdate                                      = Expiring
+angal.medicalstockward.rectify.expirydatebeforepreparationdate                   = Expiring date before Preparation date not allowed
+angal.medicalstockward.rectify.inlot                                             = In lot
 angal.medicalstockward.rectify.instock                                           = kuwepo
-angal.medicalstockward.rectify.lotinformations                                   = Rectify
-angal.medicalstockward.rectify.lotnumberSelect                                   = Rectify
-angal.medicalstockward.rectify.lotnumberabb                                      = Rectify
+angal.medicalstockward.rectify.lotinformations                                   = Lot Information
+angal.medicalstockward.rectify.lotnumberSelect                                   = Please insert a lot number
+angal.medicalstockward.rectify.lotnumberabb                                      = Lot No.
 angal.medicalstockward.rectify.medical                                           = Utabibu
 angal.medicalstockward.rectify.pieces                                            = pieces
-angal.medicalstockward.rectify.pleaseinsertavalidvalue                           = Rectify
+angal.medicalstockward.rectify.pleaseinsertavalidvalue                           = Insert a valid value
 angal.medicalstockward.rectify.pleaseselectadrug                                 = Tafadhali chagua dawa
 angal.medicalstockward.rectify.pleasespecifythereason                            = Tafadhali kutaja sababu
-angal.medicalstockward.rectify.preparationdate                                   = Rectify
+angal.medicalstockward.rectify.preparationdate                                   = Lot preparation
 angal.medicalstockward.rectify.reason                                            = Reason
-angal.medicalstockward.rectify.selectalot                                        = Rectify
-angal.medicalstockward.rectify.thiswillemptythelotproceed                        = Rectify
+angal.medicalstockward.rectify.selectalot                                        = Select a lot
+angal.medicalstockward.rectify.thiswillemptythelotproceed                        = This operation will empty the selected lot, proceed?
 angal.medicalstockward.rectify.title                                             = Rectify
-angal.medicalstockward.rectify.unitcost                                          = Rectify
+angal.medicalstockward.rectify.unitcost                                          = Unit cost
 angal.medicalstockward.selectaward                                               = <chagua iadara>
 angal.medicalstockward.ward                                                      = IDARA
 angal.medicalstockward.weightfrommustbelowerthanweightto                         = "uzito kuanzia" lazima uwe mdogo kuliko "uzito hadi"
