OP-542 Review comments

--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -332,7 +332,7 @@ angal.newbill.findpatient.btn.key                                               
 angal.newbill.changepatient.btn                                                  = Badilisha Mgonjwa
 angal.newbill.changepatient.btn.key                                              = H
 angal.newbill.givechange.btn                                                     = Kupa chenji
-angal.newbill.givechange.btn.key                                                 = G
+angal.newbill.givechange.btn.key                                                 = J
 angal.newbill.paid.btn                                                           = Imelipwa
 angal.newbill.paid.btn.key                                                       = A
 angal.newbill.refund.btn                                                         = Kurejesha
@@ -445,8 +445,8 @@ angal.therapy.removetherapy.btn                                                 
 angal.therapy.removetherapy.btn.key                                              = R
 angal.patientphoto.file.btn                                                      = File
 angal.patientphoto.file.btn.key                                                  = F
-angal.patientphoto.newphoto.btn                                                  = New Photo
-angal.patientphoto.newphoto.btn.key                                              = N
+angal.patientphoto.newphoto.btn                                                  = Picha Mpya
+angal.patientphoto.newphoto.btn.key                                              = Y
 angal.photoboothcomponent.capture.btn                                            = Capture
 angal.photoboothcomponent.capture.btn.key                                        = C
 angal.userbrowser.resetpassword.btn                                              = Reset Password
