Chore: fix spelling (#582)
* Chore: fix spelling

* Chore: fix spelling

* Chore: fix spelling

* Chore: more spelling

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -587,7 +587,7 @@ angal.dlvrtype.deletedeliverytype.fmt.msg                                       
 angal.exa.deleteexam.fmt.msg                                                     = Delete exam:\nCode= {0}\nDescription= {1}?
 angal.exa.deleteexamresult.fmt.msg                                               = Delete exam result: {0}?
 angal.exatype.deleteexamtype.fmt.msg                                             = Delete exam type: {0}?
-angal.lab.deletelabexam.fmt.msg                                                  = Delete lab exam:\nRegistation date = {0}\nExam date = {1}\nExam = {2}\nPatient = {3}\nResult = {4}?
+angal.lab.deletelabexam.fmt.msg                                                  = Delete lab exam:\nRegistration date = {0}\nExam date = {1}\nExam = {2}\nPatient = {3}\nResult = {4}?
 angal.malnutrition.delete.msg                                                    = Delete the malnutrition?
 angal.medicals.deletemedical.fmt.msg                                             = Delete medical: {0}?
 angal.medstockmovtype.deletemovementtype.fmt.msg                                 = Delete movement type: {0}?
@@ -893,7 +893,7 @@ angal.admission.pleaseinsertavalidabortdate.msg                                 
 angal.agetype.overlappedrangespleasecheckthevalues.msg                           = Overlapped ranges, please check the values.
 angal.agetype.somerangesarenotdefinedpleasecheckthevalues.msg                    = Some ranges are not defined, please check the values.
 # DicomManagerFactory and FileSystemDicomManager
-angal.dicommanager.errorwiththedicomimplmentationclass.fmt.msg                   = Error with the DICOM implmentation class: {0}.
+angal.dicommanager.errorwiththedicomimplmentationclass.fmt.msg                   = Error with the DICOM implementation class: {0}.
 angal.dicommanager.genericerror.fmt.msg                                          = Generic error: {0}
 # SourceFiles
 angal.dicom.afileinthefolderistoobigpleasesetdicommaxsizeindicomproperties.fmt.msg = A file in the folder is too big. Please set 'dicom.max.size' in dicom.properties ({0}).
@@ -1003,7 +1003,7 @@ angal.groupsbrowser.thegroupalreadyexists.fmt.msg                               
 # OpdBrowserManager
 angal.opd.pleaseinsertthepatientsage.msg                                         = Please insert the patient's age.
 angal.opd.pleaseselectpatientssex.msg                                            = Please select the patient's sex.
-angal.opd.pleaseselectadisease.msg                                               = Please select a disesase.
+angal.opd.pleaseselectadisease.msg                                               = Please select a disease.
 angal.opd.specifyingduplicatediseasesisnotallowed.msg                            = Specifying duplicate diseases is not allowed.
 # OpdIoOperationRepositoryImpl
 # OpdIoOperations
@@ -1090,7 +1090,7 @@ angal.ward.cannotdeletematernityward.msg                                        
 angal.xmpp.wantstosharewithyouthisreport.fmt.msg                                 = \n*** {0} wants to share with you this report: {1}\n
 # CommunicationFrame
 angal.xmpp.me.txt                                                                = me
-angal.xmpp.wouldliketosend.fmt.msg                                               = {0} would like to send: \n"{1}
+angal.xmpp.wouldliketosend.fmt.msg                                               = {0} would like to send: \n{1}
 angal.xmpp.thefiletransferofbetweenyouandendedsuccesfully.fmt.msg                = the file transfer of {0} between you and {1} ended successfully
 angal.xmpp.filetransferofhasbeenaccepted.fmt.msg                                 = 0101010001000001 $File transfer of: {0} has been accepted
 angal.xmpp.filetransferofhasbeenrejected.fmt.msg                                 = 0101010001010010 $File transfer of: {0} has been rejected
@@ -1187,7 +1187,7 @@ angal.genericreportbill.doyouwanttoprintreceipt.msg                             
 angal.help.pdfviewernotfound                                                     = PDF Viewer not found.\nThe User's Guide is located in the Documents folder.
 angal.help.pdfviewernotfoundoruserguidenotfound                                  = PDF Viewer not found or User Guide not found in the Documents folder
 angal.help.userguidenotfound                                                     = User Guide not found in the Documents folder
-angal.hospital                                                                   = Open Hospital                                                                                                                                                      
+angal.hospital                                                                   = Open Hospital
 angal.hospital.currencycod                                                       = Currency Code
 angal.hospital.emailaddress                                                      = Email address
 angal.hospital.faxnumber                                                         = Fax number
